# todo-project-api

./: .env  Cargo.toml  README.md
migrations/: 20241219011329_create_todo_table.up.sql  20241230082112_create_user_table.up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: mod.rs  router.rs
src/application/: mod.rs
src/application/commands/: create_todo_command.rs  mod.rs
src/application/commands/todo_commands/: create_todo_command.rs  delete_todo_command.rs  mod.rs  update_todo_command.rs
src/application/commands/user_commands/: create_user_command.rs  login_user_command.rs  mod.rs
src/application/middleware/: auth.rs
src/application/queries/: mod.rs  todo_all_query.rs
src/application/queries/todo_queries/: all_todo_query.rs  detail_todo_query.rs  mod.rs
src/domain/models/: todo.rs  user.rs
src/infrastructure/: mod.rs  mysql_database.rs
