[package]
name = "todo-project-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
bcrypt = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
jsonwebtoken = "9.3.0"

